<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView"
        android:layout_width="378dp"
        android:layout_height="49dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:fontFamily="@font/charm"
        android:gravity="center"
        android:text="@string/connexion"
        android:textColor="@color/black"
        android:textSize="25dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.181" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/utilisateurConn"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginHorizontal="20dp"
        android:background="@drawable/bg_editext"
        android:drawableLeft="@drawable/ic_user"
        android:drawablePadding="10dp"
        android:elevation="5dp"
        android:gravity="center"
        android:hint="@string/nom_d_utilisateur"
        android:paddingLeft="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.37"
        app:layout_editor_absoluteX="0dp"
        app:layout_editor_absoluteY="222dp"
        tools:ignore="MissingConstraints" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/mot_de_passConn"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginHorizontal="20dp"
        android:background="@drawable/bg_editext"
        android:drawableLeft="@drawable/ic_lock"
        android:drawablePadding="10dp"
        android:elevation="5dp"
        android:hint="@string/mot_de_pass"
        android:gravity="center"
        android:paddingLeft="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.483"
        app:layout_editor_absoluteX="0dp"
        app:layout_editor_absoluteY="222dp"
        tools:ignore="MissingConstraints" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/se_connecter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="80dp"
        android:background="@drawable/bg_btn"
        android:text="@string/se_connecter"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.755" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.901"
        app:layout_editor_absoluteX="24dp"
        app:layout_editor_absoluteY="650dp"
        tools:ignore="MissingConstraints">

        <TextView
            android:layout_width="wrap_content"
            android:id="@+id/compte"
            android:layout_height="wrap_content"
            android:text="@string/vous_n_avez_pas_de_compte"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textStyle="normal" />

        <TextView
            android:onClick="Register"
            android:id="@+id/inscrire"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/s_inscrire"
            android:textAlignment="center"
            android:textColor="#1B0FF1"
            android:textStyle="normal" />


    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>