<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    style="@style/SCREEN"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:padding="14dp"
            android:src="@drawable/back_btn"/>

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:padding="14dp"
            android:src="@drawable/settings_icon"
            android:layout_toStartOf="@+id/textParametres"/>

        <TextView
            android:id="@+id/textParametres"
            style="@style/TEXTPara"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:fontFamily="@font/chilanka"
            android:text="@string/param_tres"
            android:textStyle="bold" />
    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <LinearLayout
                android:background="@drawable/round_back_white10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="40dp"
                android:orientation="vertical"
                android:padding="15dp">

                <!-- Night  mode -->
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:id="@+id/nightModeIcon"
                        android:background="@drawable/round_back_night_mode"
                        android:padding="12sp"
                        android:src="@drawable/night_mode_icon"/>

                    <TextView
                        android:id="@+id/textModeSombre"
                        android:layout_marginStart="20dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:text="@string/mode_sombre"
                        android:fontFamily="@font/chilanka"
                        style="@style/TEXT"
                        android:textStyle="bold"
                        android:layout_toEndOf="@+id/nightModeIcon"/>

                    <androidx.appcompat.widget.SwitchCompat
                        android:id="@+id/switchMode"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:switchMinWidth="50dp"
                        android:theme="@style/nightModeSwitch"/>

                </RelativeLayout>

                <!-- Notifications -->
                <RelativeLayout
                    android:layout_marginTop="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:id="@+id/langueIcon"
                        android:background="@drawable/round_back_notifications"
                        android:padding="12sp"
                        android:src="@drawable/language_icon"/>

                    <TextView
                        android:id="@+id/textLangues"
                        android:layout_marginStart="20dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:text="@string/langues"
                        android:fontFamily="@font/chilanka"
                        style="@style/TEXT"
                        android:textStyle="bold"
                        android:layout_toEndOf="@+id/langueIcon"/>

                    <Spinner
                        android:id="@+id/languageSpinner"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginEnd="10dp"
                        android:layout_marginBottom="10dp" />


                </RelativeLayout>

                <!-- Taille du text -->
                <RelativeLayout
                    android:layout_marginTop="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:id="@+id/tailleTextIcon"
                        android:background="@drawable/round_back_private_account"
                        android:padding="12sp"
                        android:src="@drawable/text_icon"/>

                    <TextView
                        android:id="@+id/textTailleText"
                        android:layout_marginStart="20dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:text="@string/taille_du_text"
                        android:fontFamily="@font/chilanka"
                        style="@style/TEXT"
                        android:textStyle="bold"
                        android:layout_toEndOf="@+id/tailleTextIcon"/>

                    <Spinner
                        android:id="@+id/textSpinner"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginEnd="10dp"
                        android:entries="@array/text_sizes"
                        android:layout_marginBottom="10dp" />

                </RelativeLayout>

            </LinearLayout>

            <LinearLayout
                android:background="@drawable/round_back_white10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="20dp"
                android:orientation="vertical"
                android:padding="15dp">

                <!-- security -->
                <RelativeLayout
                    android:layout_marginTop="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:id="@+id/deconnIcon"
                        android:background="@drawable/round_back_security"
                        android:padding="12sp"
                        android:src="@drawable/deconnexion_icon"/>

                    <TextView
                        android:id="@+id/textDeconnexion"
                        android:layout_marginStart="20dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:text="@string/deconnexion"
                        android:fontFamily="@font/chilanka"
                        style="@style/TEXT"
                        android:textStyle="bold"
                        android:layout_toEndOf="@+id/deconnIcon"/>


                </RelativeLayout>

                <!-- security -->
                <RelativeLayout
                    android:layout_marginTop="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:id="@+id/aProposIcon"
                        android:background="@drawable/round_back_apropos"
                        android:padding="12sp"
                        android:src="@drawable/apropos_icon"/>

                    <TextView
                        android:id="@+id/textApropos"
                        android:layout_marginStart="20dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:text="@string/a_propos_de_l_application"
                        style="@style/TEXT"
                        android:fontFamily="@font/chilanka"
                        android:textStyle="bold"
                        android:layout_toEndOf="@+id/aProposIcon"/>


                </RelativeLayout>

            </LinearLayout>

        </LinearLayout>
    </ScrollView>


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/connecter"
        android:text="se connecter"
        android:gravity="center"
        android:layout_gravity="center"/>
</LinearLayout>